// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge Visual Regression (Snapshots) > asChild anchor snapshot 1`] = `
<a
  class="inline-flex items-center justify-center rounded-full border border-transparent px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden bg-primary text-primary-foreground [a&]:hover:bg-primary/90"
  data-slot="badge"
  data-variant="default"
  href="#"
>
  Link Snapshot
</a>
`;

exports[`Badge Visual Regression (Snapshots) > default variant snapshot 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full border border-transparent px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden bg-primary text-primary-foreground [a&]:hover:bg-primary/90"
  data-slot="badge"
  data-variant="default"
>
  Snapshot
</span>
`;

exports[`Badge Visual Regression (Snapshots) > destructive variant snapshot 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full border border-transparent px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden bg-destructive text-white [a&]:hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60"
  data-slot="badge"
  data-variant="destructive"
>
  Snapshot
</span>
`;

exports[`Badge Visual Regression (Snapshots) > ghost variant snapshot 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full border border-transparent px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
  data-slot="badge"
  data-variant="ghost"
>
  Snapshot
</span>
`;

exports[`Badge Visual Regression (Snapshots) > link variant snapshot 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full border border-transparent px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-primary underline-offset-4 [a&]:hover:underline"
  data-slot="badge"
  data-variant="link"
>
  Snapshot
</span>
`;

exports[`Badge Visual Regression (Snapshots) > outline variant snapshot 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-border text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground"
  data-slot="badge"
  data-variant="outline"
>
  Snapshot
</span>
`;

exports[`Badge Visual Regression (Snapshots) > secondary variant snapshot 1`] = `
<span
  class="inline-flex items-center justify-center rounded-full border border-transparent px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90"
  data-slot="badge"
  data-variant="secondary"
>
  Snapshot
</span>
`;
